# dregarnuhr

./: README.md  dregarnuhr.spec  meson.build
.github/workflows/: codeql-analysis.yml  main.yml  release.yml
debian/: changelog  control  rules
res/: dieties.json  retainers.json
src/: args.cpp  args.h  book_searcher.cpp  book_searcher.h  book_writer.cpp  book_writer.h  bookmaker.cpp  bookmaker.h  chapter_type.cpp  chapter_type.h  config.h.in  curl.cpp  curl.h  dtd.cpp  dtd.h  epub.cpp  epub.h  jpeg.cpp  jpeg.h  log.h  main.cpp  meson.build  omnibus.cpp  omnibus.h  omnibus_defs.h  part1.cpp  part1.h  part1_defs.h  part2.cpp  part2.h  part2_defs.h  part3.cpp  part3.h  part3_defs.h  part4.cpp  part4.h  part4_defs.h  part5.cpp  part5.h  part5_defs.h  (+14 more)
subprojects/: boostut.wrap  ctre.wrap  hinnant-date.wrap  libcurl.wrap  liblzma.wrap  libxmlpp.wrap  miniz.wrap  outcome.wrap
subprojects/packagefiles/ctre-patch/: meson.build
subprojects/packagefiles/outcome-patch/: meson.build  meson_options.txt
subprojects/packagefiles/outcome-patch/test/: meson.build
test/: args.cpp  meson.build  test_volumes.cpp  utils.cpp  volumes.cpp
