comparison = executable('comparison', 'tests/comparison.cpp',
                        dependencies: [outcome_hl_dep],
                        cpp_args: ['-include', 'cstring'])
test('comparison', comparison)

constexpr = executable('constexpr', 'tests/constexpr.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('constexpr', constexpr)

containers = executable('containers', 'tests/containers.cpp',
                        dependencies: [outcome_hl_dep],
                        cpp_args: ['-include', 'cstring'])
test('containers', containers)

coreoutcome = executable('core-outcome', 'tests/core-outcome.cpp',
                         dependencies: [outcome_hl_dep],
                         cpp_args: ['-include', 'cstring'])
test('core-outcome', coreoutcome)

coreresult = executable('core-result', 'tests/core-result.cpp',
                        dependencies: [outcome_hl_dep],
                        cpp_args: ['-include', 'cstring'])
test('core-result', coreresult)

coroutinesupport = executable('coroutine-support', 'tests/coroutine-support.cpp',
                              dependencies: [outcome_hl_dep],
                              cpp_args: ['-include', 'cstring', '-fcoroutines'])
test('coroutine-support', coroutinesupport)

defaultconstruction = executable('default-construction', 'tests/default-construction.cpp',
                                 dependencies: [outcome_hl_dep],
                                 cpp_args: ['-include', 'cstring'])
test('default-construction', defaultconstruction)

experimentalcoreoutcomestatus = executable('experimental-core-outcome-status', 'tests/experimental-core-outcome-status.cpp',
                                           dependencies: [outcome_hl_dep],
                                           cpp_args: ['-include', 'cstring', '-include', 'exception'])
test('experimental-core-outcome-status', experimentalcoreoutcomestatus)

experimentalcoreresultstatus = executable('experimental-core-result-status', 'tests/experimental-core-result-status.cpp',
                                          dependencies: [outcome_hl_dep],
                                          cpp_args: ['-include', 'cstring', '-include', 'exception'])
test('experimental-core-result-status', experimentalcoreresultstatus)

experimentalp0709a = executable('experimental-p0709a', 'tests/experimental-p0709a.cpp',
                                dependencies: [outcome_hl_dep],
                                cpp_args: ['-include', 'cstring'])
test('experimental-p0709a', experimentalp0709a)

fileopen = executable('fileopen', 'tests/fileopen.cpp',
                      dependencies: [outcome_hl_dep],
                      cpp_args: ['-include', 'cstring'])
test('fileopen', fileopen)

hooks = executable('hooks', 'tests/hooks.cpp',
                   dependencies: [outcome_hl_dep],
                   cpp_args: ['-include', 'cstring'])
test('hooks', hooks)

issue0007 = executable('issue0007', 'tests/issue0007.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0007', issue0007)

issue0009 = executable('issue0009', 'tests/issue0009.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0009', issue0009)

issue0010 = executable('issue0010', 'tests/issue0010.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0010', issue0010)

issue0012 = executable('issue0012', 'tests/issue0012.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0012', issue0012)

issue0016 = executable('issue0016', 'tests/issue0016.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0016', issue0016)

issue0059 = executable('issue0059', 'tests/issue0059.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0059', issue0059)

issue0061 = executable('issue0061', 'tests/issue0061.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0061', issue0061)

issue0064 = executable('issue0064', 'tests/issue0064.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0064', issue0064)

issue0065 = executable('issue0065', 'tests/issue0065.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0065', issue0065)

issue0071 = executable('issue0071', 'tests/issue0071.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0071', issue0071)

issue0095 = executable('issue0095', 'tests/issue0095.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0095', issue0095)

issue0115 = executable('issue0115', 'tests/issue0115.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0115', issue0115)

issue0116 = executable('issue0116', 'tests/issue0116.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0116', issue0116)

issue0140 = executable('issue0140', 'tests/issue0140.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0140', issue0140)

issue0182 = executable('issue0182', 'tests/issue0182.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0182', issue0182)

issue0203 = executable('issue0203', 'tests/issue0203.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0203', issue0203)

issue0210 = executable('issue0210', 'tests/issue0210.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0210', issue0210)

issue0220 = executable('issue0220', 'tests/issue0220.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0220', issue0220)

issue0244 = executable('issue0244', 'tests/issue0244.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0244', issue0244)

issue0247 = executable('issue0247', 'tests/issue0247.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0247', issue0247)

issue0255 = executable('issue0255', 'tests/issue0255.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('issue0255', issue0255)

noexceptpropagation = executable('noexcept-propagation', 'tests/noexcept-propagation.cpp',
                                 dependencies: [outcome_hl_dep],
                                 cpp_args: ['-include', 'cstring'])
test('noexcept-propagation', noexceptpropagation)

propagate = executable('propagate', 'tests/propagate.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
test('propagate', propagate)

serialisation = executable('serialisation', 'tests/serialisation.cpp',
                           dependencies: [outcome_hl_dep],
                           cpp_args: ['-include', 'cstring'])
test('serialisation', serialisation)

successfailure = executable('success-failure', 'tests/success-failure.cpp',
                            dependencies: [outcome_hl_dep],
                            cpp_args: ['-include', 'cstring'])
test('success-failure', successfailure)

swap = executable('swap', 'tests/swap.cpp',
                  dependencies: [outcome_hl_dep],
                  cpp_args: ['-include', 'cstring'])
test('swap', swap)

udts = executable('udts', 'tests/udts.cpp',
                  dependencies: [outcome_hl_dep],
                  cpp_args: ['-include', 'cstring'])
test('udts', udts)

valueorerror = executable('value-or-error', 'tests/value-or-error.cpp',
                          dependencies: [outcome_hl_dep],
                          cpp_args: ['-include', 'cstring'])
test('value-or-error', valueorerror)

expectedpass = executable('expected-pass', 'expected-pass.cpp',
                          dependencies: [outcome_hl_dep],
                          cpp_args: ['-include', 'cstring'])
test('expected-pass', expectedpass)

singleheadertest = executable('single-header-test', 'single-header-test.cpp',
                              dependencies: [outcome_hl_dep])
test('single-header-test', singleheadertest)
