if get_option('build-tests')
comparison = executable('comparison', 'tests/comparison.cpp',
                        dependencies: [outcome_hl_dep],
                        cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('comparison', comparison)
endif

constexpr = executable('constexpr', 'tests/constexpr.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('constexpr', constexpr)
endif

containers = executable('containers', 'tests/containers.cpp',
                        dependencies: [outcome_hl_dep],
                        cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('containers', containers)
endif

coreoutcome = executable('core-outcome', 'tests/core-outcome.cpp',
                         dependencies: [outcome_hl_dep],
                         cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('core-outcome', coreoutcome)
endif

coreresult = executable('core-result', 'tests/core-result.cpp',
                        dependencies: [outcome_hl_dep],
                        cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('core-result', coreresult)
endif

coroutinesupport = executable('coroutine-support', 'tests/coroutine-support.cpp',
                              dependencies: [outcome_hl_dep],
                              cpp_args: ['-include', 'cstring', '-fcoroutines'])
if get_option('build-tests')
  test('coroutine-support', coroutinesupport)
endif

defaultconstruction = executable('default-construction', 'tests/default-construction.cpp',
                                 dependencies: [outcome_hl_dep],
                                 cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('default-construction', defaultconstruction)
endif

experimentalcoreoutcomestatus = executable('experimental-core-outcome-status', 'tests/experimental-core-outcome-status.cpp',
                                           dependencies: [outcome_hl_dep],
                                           cpp_args: ['-include', 'cstring', '-include', 'exception'])
if get_option('build-tests')
  test('experimental-core-outcome-status', experimentalcoreoutcomestatus)
endif

experimentalcoreresultstatus = executable('experimental-core-result-status', 'tests/experimental-core-result-status.cpp',
                                          dependencies: [outcome_hl_dep],
                                          cpp_args: ['-include', 'cstring', '-include', 'exception'])
if get_option('build-tests')
  test('experimental-core-result-status', experimentalcoreresultstatus)
endif

experimentalp0709a = executable('experimental-p0709a', 'tests/experimental-p0709a.cpp',
                                dependencies: [outcome_hl_dep],
                                cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('experimental-p0709a', experimentalp0709a)
endif

fileopen = executable('fileopen', 'tests/fileopen.cpp',
                      dependencies: [outcome_hl_dep],
                      cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('fileopen', fileopen)
endif

hooks = executable('hooks', 'tests/hooks.cpp',
                   dependencies: [outcome_hl_dep],
                   cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('hooks', hooks)
endif

issue0007 = executable('issue0007', 'tests/issue0007.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0007', issue0007)
endif

issue0009 = executable('issue0009', 'tests/issue0009.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0009', issue0009)
endif

issue0010 = executable('issue0010', 'tests/issue0010.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0010', issue0010)
endif

issue0012 = executable('issue0012', 'tests/issue0012.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0012', issue0012)
endif

issue0016 = executable('issue0016', 'tests/issue0016.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0016', issue0016)
endif

issue0059 = executable('issue0059', 'tests/issue0059.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0059', issue0059)
endif

issue0061 = executable('issue0061', 'tests/issue0061.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0061', issue0061)
endif

issue0064 = executable('issue0064', 'tests/issue0064.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0064', issue0064)
endif

issue0065 = executable('issue0065', 'tests/issue0065.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0065', issue0065)
endif

issue0071 = executable('issue0071', 'tests/issue0071.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0071', issue0071)
endif

issue0095 = executable('issue0095', 'tests/issue0095.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0095', issue0095)
endif

issue0115 = executable('issue0115', 'tests/issue0115.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0115', issue0115)
endif

issue0116 = executable('issue0116', 'tests/issue0116.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0116', issue0116)
endif

issue0140 = executable('issue0140', 'tests/issue0140.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0140', issue0140)
endif

issue0182 = executable('issue0182', 'tests/issue0182.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0182', issue0182)
endif

issue0203 = executable('issue0203', 'tests/issue0203.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0203', issue0203)
endif

issue0210 = executable('issue0210', 'tests/issue0210.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0210', issue0210)
endif

issue0220 = executable('issue0220', 'tests/issue0220.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0220', issue0220)
endif

issue0244 = executable('issue0244', 'tests/issue0244.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0244', issue0244)
endif

issue0247 = executable('issue0247', 'tests/issue0247.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0247', issue0247)
endif

issue0255 = executable('issue0255', 'tests/issue0255.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('issue0255', issue0255)
endif

noexceptpropagation = executable('noexcept-propagation', 'tests/noexcept-propagation.cpp',
                                 dependencies: [outcome_hl_dep],
                                 cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('noexcept-propagation', noexceptpropagation)
endif

propagate = executable('propagate', 'tests/propagate.cpp',
                       dependencies: [outcome_hl_dep],
                       cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('propagate', propagate)
endif

serialisation = executable('serialisation', 'tests/serialisation.cpp',
                           dependencies: [outcome_hl_dep],
                           cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('serialisation', serialisation)
endif

successfailure = executable('success-failure', 'tests/success-failure.cpp',
                            dependencies: [outcome_hl_dep],
                            cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('success-failure', successfailure)
endif

swap = executable('swap', 'tests/swap.cpp',
                  dependencies: [outcome_hl_dep],
                  cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('swap', swap)
endif

udts = executable('udts', 'tests/udts.cpp',
                  dependencies: [outcome_hl_dep],
                  cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('udts', udts)
endif

valueorerror = executable('value-or-error', 'tests/value-or-error.cpp',
                          dependencies: [outcome_hl_dep],
                          cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('value-or-error', valueorerror)
endif

expectedpass = executable('expected-pass', 'expected-pass.cpp',
                          dependencies: [outcome_hl_dep],
                          cpp_args: ['-include', 'cstring'])
if get_option('build-tests')
  test('expected-pass', expectedpass)
endif

singleheadertest = executable('single-header-test', 'single-header-test.cpp',
                              dependencies: [outcome_hl_dep])
if get_option('build-tests')
  test('single-header-test', singleheadertest)
endif
endif
